public/css/weather-buddy.css
/***** Global Settings *****/

html {
	font-size: 100%;
}
@media (max-width: 991px) {
	html {
		font-size: 90%;
	}
}

body {
	background-image: url("../img/bg.png");
	background-repeat: repeat-x;
	background-position: left top;
	background-color: #fff096;
	font-family: "Delius","Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 1rem;
	color: #4c4c4c;
}

.navbar-inverse {
	min-width: 360px;
	background-image: url("../img/navbar-bg.png");
	background-repeat: repeat-x;
	background-position: left top;
	background-color: transparent;
	border-color: #fff;
}
.navbar-inverse .navbar-brand,
.navbar-inverse .navbar-nav > li > a,
.navbar-inverse .navbar-nav > .open > a {
	color: #fff;
	text-shadow: none;
	background-image: none;
	background-color: transparent;
}
.navbar-inverse .navbar-brand:hover,
.navbar-inverse .navbar-brand:focus,
.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:focus,
.navbar-inverse .navbar-nav > .open > a,
.navbar-inverse .navbar-nav > .open > a:hover,
.navbar-inverse .navbar-nav > .open > a:focus {
	color: #4c4c4c;
	background-color: transparent;
}
.navbar-inverse .navbar-brand {
	font-size: 1.875rem;
	font-weight: bold;
}
.navbar-inverse .navbar-nav > li > a {
	font-size: 1.25rem;
	font-weight: bold;
}
.navbar-inverse .navbar-toggle {
	border-color: #fff;
	float: left;
	margin-left: 15px;
	margin-right: 0;
}
.navbar-inverse .navbar-toggle:hover,
.navbar-inverse .navbar-toggle:focus {
	background-color: transparent;
}
.navbar-inverse .navbar-collapse,
.navbar-inverse .navbar-form {
	border-color: #fff;
}
@media (max-width: 767px) {
	.navbar-inverse {
		background-color: #fff;
	}
	.navbar-inverse .navbar-brand {
		font-size: 1.625rem;
	}
	.navbar-inverse .navbar-nav > li > a,
	.navbar-inverse .navbar-nav > .open > a,
	.navbar-inverse .navbar-nav .open .dropdown-menu > li > a,
	.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
	.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
		color: #4c4c4c;
	}
}
.dropdown-menu {
	font-size: 1rem;
}
.dropdown-menu > li > a {
	color: #4c4c4c;
}

#navbar-mobile {
	font-size: 1.125rem;
	font-weight: bold;	
}
#navbar-mobile a {
	font-size: 1.125rem;
	font-weight: normal;
}
#navbar-mobile .glyphicon {
	font-size: 1rem;
}
#navbar-mobile .user-name,
#navbar-mobile .location-search-mobile {
	padding: 10px 15px;
	line-height: 20px;
}
#navbar-mobile .location-search-mobile {
	font-weight: normal;
}
@media (min-width: 768px) {
	#navbar-mobile {
		display: none !important;
	}
}

.page-header {
	border-bottom: none;
}

.panel-default {
	background-image: url("../img/transparent.png");
	background-repeat: repeat;
	background-position: left top;
	background-color: transparent;
	border-color: #fff;
}

.table-panel {
	margin-bottom: 20px;
	border-collapse: separate;
}
.table-panel-tabs > td {
	background-image: none;
	border-top: 1px solid transparent;
	border-bottom: 1px solid #fff;
}
.table-panel-tab {
	cursor: pointer;
	white-space: nowrap;
	margin-right: 3px;
	padding: 10px 15px;
	line-height: 1.42857143;
	color: #fff;
}
.table-panel-tab:hover {
	border: 1px solid #fff;
	border-radius: 4px 4px 0 0;
	color: #4c4c4c;
}
.table-panel-tab.active {
	border: 1px solid #fff;
	border-bottom: none;
	border-radius: 4px 4px 0 0;
	cursor: default;
	color: #4c4c4c;
}
.table-panel-content,
.table-panel-tab:hover,
.table-panel-tab.active {
	background-image: url("../img/transparent.png");
	background-repeat: repeat;
	background-position: left top;
	background-color: transparent;
}
.table-panel-content > td {
	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
			box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
	border: 1px solid #fff;
	border-radius: 0 0 4px 4px;
	border-top: none;
	padding: 15px;
}

@media screen and (max-width: 767px) {
	.table-responsive {
		border: none;
	}
}
.table > thead > tr > th {
	text-transform: uppercase;
	border-bottom: 1px solid #fff !important;
	border-top: none !important;
}
.table > thead > tr > th, .table > thead > tr > td,
.table > tbody > tr > th, .table > tbody > tr > td,
.table > tfoot > tr > th, .table > tfoot > tr > td {
	border-top: 1px solid #fff;
	padding: 15px 8px;
}

.form-control {
	font-size: 1rem;
}

/***** Login Page *****/

#loginContainer {
	width: 500px;
}
#loginContainer .col-sm-3, #loginContainer .col-sm-4 {
	padding-right: 0;
}
.main-container,
#loginDiv, #createAccountDiv {
	-moz-border-bottom-colors: none;
	-moz-border-left-colors: none;
	-moz-border-right-colors: none;
	-moz-border-top-colors: none;
	border-color: transparent #ddd #ddd;
	border-image: none;
	border-style: solid;
	border-width: 1px;
	border-radius: 0 0 4px 4px;
}
.main-container {
	width: 1140px;
	padding: 20px 20px 15px;
}
.main-container .page-header {
	margin-top: 0;
}
#loginDiv {
	padding: 20px 20px 15px 15px;
}
#createAccountDiv {
	display: none;
	padding: 20px 20px 15px 15px;
}

/***** Weather Pages *****/
.location-search {
	width: 30%;
	position: absolute;
	left: 35%;
	text-align: center;
}
.location-search input {
	width: 250px !important;
}
.location-search .input-group-addon,
.location-search-mobile .input-group-addon {
	cursor: pointer;
}
@media (max-width: 991px) {
	.location-search input,
	.location-search-mobile .input-group {
		width: 200px !important;
	}
}

.location {
	color: #fff;
	font-size: 1.125rem;
	float: left;
}
.share {
	float: right;
	color: #fff;
	font-size: 1.125rem;
}
.main-link {
	color: #fff;
	text-transform: uppercase;
	font-size: 1.125rem;
	margin-top: 30px;
}
.main-link a {
	color: #fff;
}
.main-link a:hover, .main-link a:focus {
	color: #4c4c4c;
}
.main-link .glyphicon {
	font-size: 1rem;
}
.welcome {
	color: #fff;
	font-size: 2rem;
	margin: 30px 0 0;
}
.important-info {
	color: #fff;
	font-size: 2.25rem;
	font-weight: bold;
}
.important-info .glyphicon {
	font-size: 1.5rem;
	display: inline-block;
	margin-left: 15px;
}
.additional-info {
	color: #fff;
	font-size: 1.625rem;
}
.additional-info .glyphicon {
	font-size: 1.125rem;
	display: inline-block;
	margin-left: 10px;
}
.weather-tabs {
	margin-top: 60px;
	border-bottom: none;
}
.weather-tabs > li.active > a,
.weather-tabs > li.active > a:hover,
.weather-tabs > li.active > a:focus {
	color: #4c4c4c;
	background-image: url("../img/transparent.png");
	background-repeat: repeat;
	background-position: left top;
	background-color: transparent;
	border: 1px solid #fff;
}
.weather-details {
	margin: 60px 0 20px;
}
.weather-details .table {
	margin-bottom: 0;
}
.today-details > tbody > tr > td {
	border-top: none;
	border-left: 1px solid #fff;
	padding: 8px 8px;
}
.today-details > tbody > tr > td.no-border {
	border-left: none;
}
.today-details .temperature-row {
	font-size: 1.125rem;
	font-weight: bold;
}
.today-details .temperature-row td {
	padding-top: 5px;
}
@media (max-width: 767px) {
	.main-link {
		display: none;
	}
	.welcome {
		font-size: 1.25rem;
		margin: 20px 0 0;
	}
	.important-info {
		font-size: 1.25rem;
	}
	.important-info .glyphicon {
		font-size: 1rem;
		margin-left: 3px;
	}
	.additional-info {
		font-size: 1.125rem;
	}
	.additional-info .glyphicon {
		font-size: 1rem;
		margin-left: 5px;
	}
	.weather-details {
		margin: 30px 0 10px;
	}
}

.weather-icon {
	height: 25px;
	width: 25px;
	background-size: contain;
	background-repeat: no-repeat;
}
.weather-icon.sun {
	background-image: url("../img/weather/sun.png");
}
.weather-icon.moon {
	background-image: url("../img/weather/moon.png");
}
.weather-icon.cloud {
	background-image: url("../img/weather/cloud.png");
}
.weather-icon.rain {
	background-image: url("../img/weather/rain.png");
}
.weather-icon.snow {
	background-image: url("../img/weather/snow.png");
}
.weather-icon.storm {
	background-image: url("../img/weather/storm.png");
}
.today-details .weather-icon {
	height: 38px;
	width: 38px;
	margin: 0 auto;
}

